create user from frontend

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -75,3 +75,7 @@ input[type="checkbox"]:checked + label {
 .button-text {
   @apply text-6xl relative -top-2;
 }
+
+.error {
+  @apply text-red-600;
+}
